# workingwise2

./: README.md  build.sh
src/: CMakeLists.txt  makefile
src/HMMer2/: sqio.c
src/corba/: makefile
src/dnaindex/: compressed_protein_index.c  compressed_protein_index.dy  compressed_protein_index.h  makefile
src/dnaindex/assembly/: makefile
src/dyc/: calc.l  calc.y  lex.yy.c  makefile  type.h  y.tab.c  y.tab.h
src/dynlibsrc/: makefile  makefile_old
src/intelbin/: dba  dnal  estwise  estwisedb  genewise  genewisedb  promoterwise  psw  pswdb  scanwise  scanwise_server
src/models/: bigdba.c  dba  dnal  est_evidence.c  est_evidence.dy  est_evidence.h  estwisedb  geneloop21.c  genewise6.c  genewisedb  genomewise  makefile  motifmatrix.c  pseudowise  pswdb  scanwise  sywise
src/network/: makefile
src/oldbin/: dba  dnal  estwise  estwisedb  genewise  genewisedb  promoterwise  psw  pswdb  scanwise  scanwise_server
src/other_programs/: makefile
src/perl/Wise2/: MYMETA.json  MYMETA.yml  Makefile  Wise2.xs  Wise2.xsc  typemap
src/perl/Wise2/blib/lib/auto/Wise2/: autosplit.ix
src/perl/Wise2/libs/: Makefile  wise2.h
src/snp/: makefile
