cmake_minimum_required(VERSION 3.5)
project(src)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_path(GLIB_INCLUDE_DIR NAMES glib.h PATH_SUFFIXES glib-2.0)

set(SOURCE_FILES
    api/examples/est.dna
    api/examples/makefile
    api/examples/README
    api/examples/revcomp.c
    api/examples/roac.pep
    api/examples/road.pep
    api/examples/sw.c
    api/include/basic.h
    api/include/dyna.head
    api/include/makefile
    api/include/models.head
    api/include/wisebase_api.h
    api/libs/libdyna.a
    api/libs/libwisebase.a
    api/libs/makefile
    api/README
    base/commandline.c
    base/commandline.dy
    base/commandline.h
    base/commandline.o
    base/commandline_api.h
    base/commandline_api.t
    base/libwisebase.a
    base/LICENSE
    base/linesubs.c
    base/linesubs.dy
    base/linesubs.h
    base/linesubs.o
    base/makefile
    base/wisebase.h
    base/wiseconfig.c
    base/wiseconfig.h
    base/wiseconfig.o
    base/wiseerror.c
    base/wiseerror.dy
    base/wiseerror.h
    base/wiseerror.o
    base/wiseerror_api.h
    base/wiseerror_api.t
    base/wisefile.c
    base/wisefile.dy
    base/wisefile.h
    base/wisefile.o
    base/wisefile_api.h
    base/wisefile_api.t
    base/wisememman.c
    base/wisememman.dy
    base/wisememman.h
    base/wisememman.o
    base/wiseoverlay.c
    base/wiseoverlay.dy
    base/wiseoverlay.h
    base/wiseoverlay.o
    base/wiserandom.c
    base/wiserandom.dy
    base/wiserandom.h
    base/wiserandom.o
    base/wisestreaminterface.c
    base/wisestreaminterface.dy
    base/wisestreaminterface.h
    base/wisestreaminterface.o
    base/wisestring.c
    base/wisestring.dy
    base/wisestring.h
    base/wisestring.o
    base/wisetime.c
    base/wisetime.dy
    base/wisetime.h
    base/wisetime.o
    contig/contig.dy
    contig/makefile
    contig/overlap.dy
    contig/testoverlap.c
    corba/corba_singleton.c
    corba/corba_singleton.h
    corba/hspscan_corba.idl
    corba/hspscan_corba_wrapper.c
    corba/hspscan_corba_wrapper.h
    corba/hspscan_server_impl.c
    corba/hspscan_server_impl.h
    corba/makefile
    corba/makefile_old
    corba/newmk
    corba/scanwise_protein_index.c
    corba/test_client.c
    corba/test_server.c
    corba/test_wrapper.c
    dnaindex/assembly/assemblygraph.dy
    dnaindex/assembly/assemblypath.dy
    dnaindex/assembly/assemblystats.dy
    dnaindex/assembly/badkmer.c
    dnaindex/assembly/basegraph.dy
    dnaindex/assembly/depthmanager.dy
    dnaindex/assembly/grapherror.dy
    dnaindex/assembly/graphmanager.dy
    dnaindex/assembly/graphtangle.dy
    dnaindex/assembly/makefile
    dnaindex/assembly/pathwise.c
    dnaindex/assembly/supertangle.dy
    dnaindex/assembly/test_assemblygraph.c
    dnaindex/assembly/test_basegraph.c
    dnaindex/assembly/test_graphtangle.c
    dnaindex/assembly.c
    dnaindex/assembly.dy
    dnaindex/assembly.h
    dnaindex/assembly.o
    dnaindex/assembly_sanger_project.c
    dnaindex/assembly_sanger_project.dy
    dnaindex/assembly_sanger_project.h
    dnaindex/assembly_sanger_project.o
    dnaindex/assembly_stream_cons.c
    dnaindex/assembly_stream_cons.dy
    dnaindex/assembly_stream_cons.h
    dnaindex/assembly_stream_cons.o
    dnaindex/assembly_stream_fasta.c
    dnaindex/assembly_stream_fasta.dy
    dnaindex/assembly_stream_fasta.h
    dnaindex/assembly_stream_fasta.o
    dnaindex/assembly_stream_interface.c
    dnaindex/assembly_stream_interface.dy
    dnaindex/assembly_stream_interface.h
    dnaindex/assembly_stream_interface.o
    dnaindex/bigseqwise.c
    dnaindex/calculate_compara_n50.pl
    dnaindex/chhash.c
    dnaindex/chhash.h
    dnaindex/compara2dotplot.pl
    dnaindex/comparapath.c
    dnaindex/comparapath.dy
    dnaindex/comparapath.h
    dnaindex/compressed_protein_index.c
    dnaindex/compressed_protein_index.dy
    dnaindex/compressed_protein_index.h
    dnaindex/compressed_protein_index.o
    dnaindex/dnamapping.c
    dnaindex/dnamapping.dy
    dnaindex/dnamapping.h
    dnaindex/dnamapping.o
    dnaindex/dnanumber.c
    dnaindex/dnanumber.dy
    dnaindex/dnanumber.h
    dnaindex/eulerindex.c
    dnaindex/eulerindex.dy
    dnaindex/eulerindex.h
    dnaindex/findbad_kmer.c
    dnaindex/kmer_assembly.c
    dnaindex/kmer_assembly.dy
    dnaindex/kmer_assembly.h
    dnaindex/kmer_assembly.o
    dnaindex/kmer_assembly_contig.c
    dnaindex/kmer_assembly_contig.dy
    dnaindex/kmer_assembly_contig.h
    dnaindex/kmer_assembly_contig.o
    dnaindex/kmer_assembly_error.c
    dnaindex/kmer_assembly_error.dy
    dnaindex/kmer_assembly_error.h
    dnaindex/kmer_assembly_error.o
    dnaindex/kmer_assembly_untangler.c
    dnaindex/kmer_assembly_untangler.dy
    dnaindex/kmer_assembly_untangler.h
    dnaindex/kmer_assembly_untangler.o
    dnaindex/kmer_count.c
    dnaindex/kmer_count.dy
    dnaindex/kmer_count.h
    dnaindex/kmer_count.o
    dnaindex/kmer_direct.c
    dnaindex/kmer_direct.dy
    dnaindex/kmer_direct.h
    dnaindex/kmer_direct.o
    dnaindex/kmer_glib_index.c
    dnaindex/kmer_glib_index.dy
    dnaindex/kmer_glib_index.h
    dnaindex/kmer_glib_index.o
    dnaindex/kmer_hash.c
    dnaindex/kmer_hash.dy
    dnaindex/kmer_hash.h
    dnaindex/kmer_hash.o
    dnaindex/kmer_index_interface.c
    dnaindex/kmer_index_interface.dy
    dnaindex/kmer_index_interface.h
    dnaindex/kmer_index_interface.o
    dnaindex/kmer_stat.c
    dnaindex/kwise.c
    dnaindex/largeseqreader.c
    dnaindex/largeseqreader.dy
    dnaindex/largeseqreader.h
    dnaindex/largeseqreader.o
    dnaindex/linkindex.c
    dnaindex/linkindex.dy
    dnaindex/linkindex.h
    dnaindex/make_shotgun.c
    dnaindex/make_shotgun.pl
    dnaindex/makefile
    dnaindex/shotgun.c
    dnaindex/shotgun.dy
    dnaindex/shotgun.h
    dnaindex/singleseqspace.c
    dnaindex/singleseqspace.dy
    dnaindex/singleseqspace.h
    dnaindex/singleseqspace.o
    dnaindex/tangle.fa
    dnaindex/test_compara.c
    dnaindex/test_dnanumber.c
    dnaindex/test_euler.c
    dnaindex/test_kmer.c
    dnaindex/test_linkindex.c
    dnaindex/vectorindex.c
    dnaindex/vectorindex.dy
    dnaindex/vectorindex.h
    dyc/api.c
    dyc/api.dy
    dyc/api.h
    dyc/calc.l
    dyc/calc.y
    dyc/compugen.c
    dyc/compugen.h
    dyc/dbmpi.c
    dyc/dbmpi.dy
    dyc/dbmpi.h
    dyc/dbthread.c
    dyc/dbthread.dy
    dyc/dbthread.h
    dyc/display.c
    dyc/display.dy
    dyc/display.h
    dyc/docugen.c
    dyc/dpimpl.c
    dyc/dpimpl.dy
    dyc/dpimpl.h
    dyc/dy2om.c
    dyc/dy2om.dy
    dyc/dy2om.h
    dyc/dyc.c
    dyc/dymain.c
    dyc/dymain.dy
    dyc/dymain.h
    dyc/dyna2.c
    dyc/dyna2.dy
    dyc/dyna2.h
    dyc/dynadb.c
    dyc/dynadb.dy
    dyc/dynadb.h
    dyc/dynadebug.c
    dyc/dynadebug.dy
    dyc/dynadebug.h
    dyc/dynafunc.c
    dyc/dynafunc.dy
    dyc/dynafunc.h
    dyc/dynashadow.c
    dyc/dynashadow.dy
    dyc/dynashadow.h
    dyc/dynfile.c
    dyc/dynfile.dy
    dyc/dynfile.h
    dyc/dyshatter.c
    dyc/dyshatter.dy
    dyc/dyshatter.h
    dyc/exprtree.c
    dyc/exprtree.dy
    dyc/exprtree.h
    dyc/friend.c
    dyc/friend.dy
    dyc/friend.h
    dyc/ftext.c
    dyc/ftext.dy
    dyc/ftext.h
    dyc/funcinfo.c
    dyc/funcinfo.dy
    dyc/funcinfo.h
    dyc/input.c
    dyc/input.dy
    dyc/input.h
    dyc/inputfile.c
    dyc/inputfile.dy
    dyc/inputfile.h
    dyc/kbestsearch.c
    dyc/kbestsearch.dy
    dyc/kbestsearch.h
    dyc/labelmaster.c
    dyc/labelmaster.dy
    dyc/labelmaster.h
    dyc/lex.yy.c
    dyc/LICENSE
    dyc/linkmap.c
    dyc/linkmap.dy
    dyc/linkmap.h
    dyc/makefile
    dyc/method.c
    dyc/method.dy
    dyc/method.h
    dyc/module.c
    dyc/module.h
    dyc/modulefunc.c
    dyc/modulefunc.dy
    dyc/modulefunc.h
    dyc/moduleinfo.c
    dyc/moduleinfo.dy
    dyc/moduleinfo.h
    dyc/objectinfo.c
    dyc/objectinfo.dy
    dyc/objectinfo.h
    dyc/optimiser.c
    dyc/optimiser.dy
    dyc/optimiser.h
    dyc/probal.c
    dyc/probal.dy
    dyc/probal.h
    dyc/telegraph.c
    dyc/telegraph.dy
    dyc/telegraph.h
    dyc/type.c
    dyc/type.dy
    dyc/type.h
    dyc/variable.c
    dyc/variable.dy
    dyc/variable.h
    dyc/wisec.c
    dyc/wisec.dy
    dyc/wisec.h
    dyc/y.tab.c
    dyc/y.tab.h
    dynamite_examples/cdna2genomic.dy
    dynamite_examples/dbsearch.c
    dynamite_examples/est.dna
    dynamite_examples/est2gen.c
    dynamite_examples/estgendisplay.c
    dynamite_examples/estgendisplay.dy
    dynamite_examples/estgendisplay.h
    dynamite_examples/genomic.dna
    dynamite_examples/makefile
    dynamite_examples/proteinsw.dy
    dynamite_examples/psw.c
    dynamite_examples/README
    dynamite_examples/roac.pep
    dynamite_examples/road.pep
    dynamite_examples/seqaligndisplay.c
    dynamite_examples/seqaligndisplay.dy
    dynamite_examples/seqaligndisplay.h
    dynlibsrc/aln.c
    dynlibsrc/aln.dy
    dynlibsrc/aln.h
    dynlibsrc/aln.o
    dynlibsrc/aln.pod
    dynlibsrc/aln.tex
    dynlibsrc/aln.typemap
    dynlibsrc/aln.xs
    dynlibsrc/aln_api.h
    dynlibsrc/aln_api.t
    dynlibsrc/alnconvert.c
    dynlibsrc/alnconvert.dy
    dynlibsrc/alnconvert.h
    dynlibsrc/alnconvert.o
    dynlibsrc/alnrange.c
    dynlibsrc/alnrange.dy
    dynlibsrc/alnrange.h
    dynlibsrc/alnrange.o
    dynlibsrc/alnrange.pod
    dynlibsrc/alnrange.tex
    dynlibsrc/alnrange.typemap
    dynlibsrc/alnrange.xs
    dynlibsrc/alnrange_api.h
    dynlibsrc/alnrange_api.t
    dynlibsrc/arrayseqlookup.c
    dynlibsrc/arrayseqlookup.dy
    dynlibsrc/arrayseqlookup.h
    dynlibsrc/arrayseqlookup.o
    dynlibsrc/asciibtcanvas.c
    dynlibsrc/asciibtcanvas.dy
    dynlibsrc/asciibtcanvas.h
    dynlibsrc/asciibtcanvas.o
    dynlibsrc/basematrix.c
    dynlibsrc/basematrix.dy
    dynlibsrc/basematrix.h
    dynlibsrc/basematrix.o
    dynlibsrc/basematrix.pod
    dynlibsrc/basematrix.tex
    dynlibsrc/basematrix.typemap
    dynlibsrc/basematrix.xs
    dynlibsrc/basematrix_api.h
    dynlibsrc/basematrix_api.t
    dynlibsrc/btcanvas.c
    dynlibsrc/btcanvas.dy
    dynlibsrc/btcanvas.h
    dynlibsrc/btcanvas.o
    dynlibsrc/cdna.c
    dynlibsrc/cdna.dy
    dynlibsrc/cdna.h
    dynlibsrc/cdna.o
    dynlibsrc/cdna.pod
    dynlibsrc/cdna.tex
    dynlibsrc/cdna.typemap
    dynlibsrc/cdna.xs
    dynlibsrc/cdna_api.h
    dynlibsrc/cdna_api.t
    dynlibsrc/cdnadb.c
    dynlibsrc/cdnadb.dy
    dynlibsrc/cdnadb.h
    dynlibsrc/cdnadb.o
    dynlibsrc/cdnadb.pod
    dynlibsrc/cdnadb.tex
    dynlibsrc/cdnadb.typemap
    dynlibsrc/cdnadb.xs
    dynlibsrc/cdnadb_api.h
    dynlibsrc/cdnadb_api.t
    dynlibsrc/codon.c
    dynlibsrc/codon.dy
    dynlibsrc/codon.h
    dynlibsrc/codon.o
    dynlibsrc/codon.pod
    dynlibsrc/codon.tex
    dynlibsrc/codon.typemap
    dynlibsrc/codon.xs
    dynlibsrc/codon_api.h
    dynlibsrc/codon_api.t
    dynlibsrc/codonmapper.c
    dynlibsrc/codonmapper.dy
    dynlibsrc/codonmapper.h
    dynlibsrc/codonmapper.o
    dynlibsrc/codonmapper.pod
    dynlibsrc/codonmapper.tex
    dynlibsrc/codonmapper.typemap
    dynlibsrc/codonmapper.xs
    dynlibsrc/codonmapper_api.h
    dynlibsrc/codonmapper_api.t
    dynlibsrc/codonmatrix.c
    dynlibsrc/codonmatrix.dy
    dynlibsrc/codonmatrix.h
    dynlibsrc/codonmatrix.o
    dynlibsrc/complexconsensi.c
    dynlibsrc/complexconsensi.dy
    dynlibsrc/complexconsensi.h
    dynlibsrc/complexconsensi.o
    dynlibsrc/complexevalset.c
    dynlibsrc/complexevalset.dy
    dynlibsrc/complexevalset.h
    dynlibsrc/complexevalset.o
    dynlibsrc/complexsequence.c
    dynlibsrc/complexsequence.dy
    dynlibsrc/complexsequence.h
    dynlibsrc/complexsequence.o
    dynlibsrc/complexsequence.pod
    dynlibsrc/complexsequence.tex
    dynlibsrc/complexsequence.typemap
    dynlibsrc/complexsequence.xs
    dynlibsrc/complexsequence_api.h
    dynlibsrc/complexsequence_api.t
    dynlibsrc/compmat.c
    dynlibsrc/compmat.dy
    dynlibsrc/compmat.h
    dynlibsrc/compmat.o
    dynlibsrc/compmat.pod
    dynlibsrc/compmat.tex
    dynlibsrc/compmat.typemap
    dynlibsrc/compmat.xs
    dynlibsrc/compmat_api.h
    dynlibsrc/compmat_api.t
    dynlibsrc/database.h
    dynlibsrc/dbsearchimpl.c
    dynlibsrc/dbsearchimpl.dy
    dynlibsrc/dbsearchimpl.h
    dynlibsrc/dbsearchimpl.o
    dynlibsrc/dbsearchimpl.pod
    dynlibsrc/dbsearchimpl.tex
    dynlibsrc/dbsearchimpl.typemap
    dynlibsrc/dbsearchimpl.xs
    dynlibsrc/dbsearchimpl_api.h
    dynlibsrc/dbsearchimpl_api.t
    dynlibsrc/dna.c
    dynlibsrc/dna.dy
    dynlibsrc/dna.h
    dynlibsrc/dna.o
    dynlibsrc/dnaindexcons.c
    dynlibsrc/dnaindexcons.dy
    dynlibsrc/dnaindexcons.h
    dynlibsrc/dnaindexcons.o
    dynlibsrc/dnamatrix.c
    dynlibsrc/dnamatrix.dy
    dynlibsrc/dnamatrix.h
    dynlibsrc/dnamatrix.o
    dynlibsrc/dnamatrix.pod
    dynlibsrc/dnamatrix.tex
    dynlibsrc/dnamatrix.typemap
    dynlibsrc/dnamatrix.xs
    dynlibsrc/dnamatrix_api.h
    dynlibsrc/dnamatrix_api.t
    dynlibsrc/dpenvelope.c
    dynlibsrc/dpenvelope.dy
    dynlibsrc/dpenvelope.h
    dynlibsrc/dpenvelope.o
    dynlibsrc/dprunimpl.c
    dynlibsrc/dprunimpl.dy
    dynlibsrc/dprunimpl.h
    dynlibsrc/dprunimpl.o
    dynlibsrc/dyna.h
    dynlibsrc/dynlibcross.c
    dynlibsrc/dynlibcross.dy
    dynlibsrc/dynlibcross.h
    dynlibsrc/dynlibcross.o
    dynlibsrc/embl.c
    dynlibsrc/embl.dy
    dynlibsrc/embl.h
    dynlibsrc/embl.o
    dynlibsrc/gene.c
    dynlibsrc/gene.dy
    dynlibsrc/gene.h
    dynlibsrc/gene.o
    dynlibsrc/gene.pod
    dynlibsrc/gene.tex
    dynlibsrc/gene.typemap
    dynlibsrc/gene.xs
    dynlibsrc/gene_api.h
    dynlibsrc/gene_api.t
    dynlibsrc/genericindexresult.c
    dynlibsrc/genericindexresult.dy
    dynlibsrc/genericindexresult.h
    dynlibsrc/genericindexresult.o
    dynlibsrc/genomic.c
    dynlibsrc/genomic.dy
    dynlibsrc/genomic.h
    dynlibsrc/genomic.o
    dynlibsrc/genomic.pod
    dynlibsrc/genomic.tex
    dynlibsrc/genomic.typemap
    dynlibsrc/genomic.xs
    dynlibsrc/genomic_api.h
    dynlibsrc/genomic_api.t
    dynlibsrc/genomicdb.c
    dynlibsrc/genomicdb.dy
    dynlibsrc/genomicdb.h
    dynlibsrc/genomicdb.o
    dynlibsrc/genomicdb.pod
    dynlibsrc/genomicdb.tex
    dynlibsrc/genomicdb.typemap
    dynlibsrc/genomicdb.xs
    dynlibsrc/genomicdb_api.h
    dynlibsrc/genomicdb_api.t
    dynlibsrc/genomicregion.c
    dynlibsrc/genomicregion.dy
    dynlibsrc/genomicregion.h
    dynlibsrc/genomicregion.o
    dynlibsrc/genomicregion.pod
    dynlibsrc/genomicregion.tex
    dynlibsrc/genomicregion.typemap
    dynlibsrc/genomicregion.xs
    dynlibsrc/genomicregion_api.h
    dynlibsrc/genomicregion_api.t
    dynlibsrc/histogram.c
    dynlibsrc/histogram.dy
    dynlibsrc/histogram.h
    dynlibsrc/histogram.o
    dynlibsrc/histogram.pod
    dynlibsrc/histogram.tex
    dynlibsrc/histogram.typemap
    dynlibsrc/histogram.xs
    dynlibsrc/histogram_api.h
    dynlibsrc/histogram_api.t
    dynlibsrc/hitlist.c
    dynlibsrc/hitlist.dy
    dynlibsrc/hitlist.h
    dynlibsrc/hitlist.o
    dynlibsrc/hscore.c
    dynlibsrc/hscore.dy
    dynlibsrc/hscore.h
    dynlibsrc/hscore.o
    dynlibsrc/hscore.pod
    dynlibsrc/hscore.tex
    dynlibsrc/hscore.typemap
    dynlibsrc/hscore.xs
    dynlibsrc/hscore_api.h
    dynlibsrc/hscore_api.t
    dynlibsrc/hsp.c
    dynlibsrc/hsp.dy
    dynlibsrc/hsp.h
    dynlibsrc/hsp.o
    dynlibsrc/hsp2hitscan.c
    dynlibsrc/hsp2hitscan.dy
    dynlibsrc/hsp2hitscan.h
    dynlibsrc/hsp2hitscan.o
    dynlibsrc/hsphandler.c
    dynlibsrc/hsphandler.dy
    dynlibsrc/hsphandler.h
    dynlibsrc/hsphandler.o
    dynlibsrc/hsplookupscan.c
    dynlibsrc/hsplookupscan.dy
    dynlibsrc/hsplookupscan.h
    dynlibsrc/hsplookupscan.o
    dynlibsrc/hsplookupthreaded.c
    dynlibsrc/hsplookupthreaded.dy
    dynlibsrc/hsplookupthreaded.h
    dynlibsrc/hsplookupthreaded.o
    dynlibsrc/hspscaninterface.c
    dynlibsrc/hspscaninterface.dy
    dynlibsrc/hspscaninterface.h
    dynlibsrc/hspscaninterface.o
    dynlibsrc/hspscanruntime.c
    dynlibsrc/hspscanruntime.dy
    dynlibsrc/hspscanruntime.h
    dynlibsrc/hspscanruntime.o
    dynlibsrc/hspstream.c
    dynlibsrc/hspstream.dy
    dynlibsrc/hspstream.h
    dynlibsrc/hspstream.o
    dynlibsrc/hspthreadeddb.c
    dynlibsrc/hspthreadeddb.dy
    dynlibsrc/hspthreadeddb.h
    dynlibsrc/hspthreadeddb.o
    dynlibsrc/hsptwohitscan.c
    dynlibsrc/hsptwohitscan.dy
    dynlibsrc/hsptwohitscan.h
    dynlibsrc/hsptwohitscan.o
    dynlibsrc/intallocator.c
    dynlibsrc/intallocator.dy
    dynlibsrc/intallocator.h
    dynlibsrc/intallocator.o
    dynlibsrc/libdyna.a
    dynlibsrc/libdyna_glib.a
    dynlibsrc/LICENSE
    dynlibsrc/linkedlist_lookpos.c
    dynlibsrc/linkedlist_lookpos.dy
    dynlibsrc/linkedlist_lookpos.h
    dynlibsrc/linkedlist_lookpos.o
    dynlibsrc/makefile
    dynlibsrc/makefile_old
    dynlibsrc/matrixdebug.c
    dynlibsrc/matrixdebug.dy
    dynlibsrc/matrixdebug.h
    dynlibsrc/matrixdebug.o
    dynlibsrc/packaln.c
    dynlibsrc/packaln.dy
    dynlibsrc/packaln.h
    dynlibsrc/packaln.o
    dynlibsrc/packaln.pod
    dynlibsrc/packaln.tex
    dynlibsrc/packaln.typemap
    dynlibsrc/packaln.xs
    dynlibsrc/packaln_api.h
    dynlibsrc/packaln_api.t
    dynlibsrc/pairbase.c
    dynlibsrc/pairbase.dy
    dynlibsrc/pairbase.h
    dynlibsrc/pairbase.o
    dynlibsrc/pairbaseseq.c
    dynlibsrc/pairbaseseq.dy
    dynlibsrc/pairbaseseq.h
    dynlibsrc/pairbaseseq.o
    dynlibsrc/probability.c
    dynlibsrc/probability.dy
    dynlibsrc/probability.h
    dynlibsrc/probability.o
    dynlibsrc/probability.pod
    dynlibsrc/probability.tex
    dynlibsrc/probability.typemap
    dynlibsrc/probability.xs
    dynlibsrc/probability_api.h
    dynlibsrc/probability_api.t
    dynlibsrc/protein.c
    dynlibsrc/protein.dy
    dynlibsrc/protein.h
    dynlibsrc/protein.o
    dynlibsrc/protein.pod
    dynlibsrc/protein.tex
    dynlibsrc/protein.typemap
    dynlibsrc/protein.xs
    dynlibsrc/protein_api.h
    dynlibsrc/protein_api.t
    dynlibsrc/proteindb.c
    dynlibsrc/proteindb.dy
    dynlibsrc/proteindb.h
    dynlibsrc/proteindb.o
    dynlibsrc/proteindb.pod
    dynlibsrc/proteindb.tex
    dynlibsrc/proteindb.typemap
    dynlibsrc/proteindb.xs
    dynlibsrc/proteindb_api.h
    dynlibsrc/proteindb_api.t
    dynlibsrc/proteinindexcons.c
    dynlibsrc/proteinindexcons.dy
    dynlibsrc/proteinindexcons.h
    dynlibsrc/proteinindexcons.o
    dynlibsrc/proteinstreamedindex.c
    dynlibsrc/proteinstreamedindex.dy
    dynlibsrc/proteinstreamedindex.h
    dynlibsrc/proteinstreamedindex.o
    dynlibsrc/pthreadpool.c
    dynlibsrc/pthreadpool.dy
    dynlibsrc/pthreadpool.h
    dynlibsrc/randomdb.c
    dynlibsrc/randomdb.dy
    dynlibsrc/randomdb.h
    dynlibsrc/randomdb.o
    dynlibsrc/randomdb.pod
    dynlibsrc/randomdb.tex
    dynlibsrc/randomdb.typemap
    dynlibsrc/randomdb.xs
    dynlibsrc/randomdb_api.h
    dynlibsrc/randomdb_api.t
    dynlibsrc/randommodel.c
    dynlibsrc/randommodel.dy
    dynlibsrc/randommodel.h
    dynlibsrc/randommodel.o
    dynlibsrc/randommodel.pod
    dynlibsrc/randommodel.tex
    dynlibsrc/randommodel.typemap
    dynlibsrc/randommodel.xs
    dynlibsrc/randommodel_api.h
    dynlibsrc/randommodel_api.t
    dynlibsrc/searchstatinterface.c
    dynlibsrc/searchstatinterface.dy
    dynlibsrc/searchstatinterface.h
    dynlibsrc/searchstatinterface.o
    dynlibsrc/searchstatlookup.c
    dynlibsrc/searchstatlookup.dy
    dynlibsrc/searchstatlookup.h
    dynlibsrc/searchstatlookup.o
    dynlibsrc/seqalign.c
    dynlibsrc/seqalign.dy
    dynlibsrc/seqalign.h
    dynlibsrc/seqalign.o
    dynlibsrc/seqlookup.c
    dynlibsrc/seqlookup.dy
    dynlibsrc/seqlookup.h
    dynlibsrc/seqlookup.o
    dynlibsrc/sequence.c
    dynlibsrc/sequence.dy
    dynlibsrc/sequence.h
    dynlibsrc/sequence.o
    dynlibsrc/sequence.pod
    dynlibsrc/sequence.tex
    dynlibsrc/sequence.typemap
    dynlibsrc/sequence.xs
    dynlibsrc/sequence_api.h
    dynlibsrc/sequence_api.t
    dynlibsrc/sequence_codon.c
    dynlibsrc/sequence_codon.dy
    dynlibsrc/sequence_codon.h
    dynlibsrc/sequence_codon.pod
    dynlibsrc/sequence_codon.tex
    dynlibsrc/sequence_codon.typemap
    dynlibsrc/sequence_codon.xs
    dynlibsrc/sequence_codon_api.h
    dynlibsrc/sequence_codon_api.t
    dynlibsrc/sequencedb.c
    dynlibsrc/sequencedb.dy
    dynlibsrc/sequencedb.h
    dynlibsrc/sequencedb.o
    dynlibsrc/sequencedb.pod
    dynlibsrc/sequencedb.tex
    dynlibsrc/sequencedb.typemap
    dynlibsrc/sequencedb.xs
    dynlibsrc/sequencedb_api.h
    dynlibsrc/sequencedb_api.t
    dynlibsrc/sequencestream.c
    dynlibsrc/sequencestream.dy
    dynlibsrc/sequencestream.h
    dynlibsrc/sequencestream.o
    dynlibsrc/shadowseq.c
    dynlibsrc/shadowseq.dy
    dynlibsrc/shadowseq.h
    dynlibsrc/shadowseq.o
    dynlibsrc/shadowseqindex.c
    dynlibsrc/shadowseqindex.dy
    dynlibsrc/shadowseqindex.h
    dynlibsrc/shadowseqindex.o
    dynlibsrc/shattermatrix.c
    dynlibsrc/shattermatrix.dy
    dynlibsrc/shattermatrix.h
    dynlibsrc/shattermatrix.o
    dynlibsrc/singlenumberspace.c
    dynlibsrc/singlenumberspace.dy
    dynlibsrc/singlenumberspace.h
    dynlibsrc/singlenumberspace.o
    dynlibsrc/staticseq.c
    dynlibsrc/staticseq.dy
    dynlibsrc/staticseq.h
    dynlibsrc/staticseq.o
    dynlibsrc/subseqhash.c
    dynlibsrc/subseqhash.dy
    dynlibsrc/subseqhash.h
    dynlibsrc/subseqhash.o
    dynlibsrc/subseqlookup.c
    dynlibsrc/subseqlookup.dy
    dynlibsrc/subseqlookup.h
    dynlibsrc/test_genomic.c
    dynlibsrc/test_hsp.c
    dynlibsrc/test_intallocator.c
    dynlibsrc/test_psi.c
    dynlibsrc/test_randomdb.c
    dynlibsrc/test_seqhash.c
    dynlibsrc/test_shadowindex.c
    dynlibsrc/testdb.c
    dynlibsrc/testgendb
    dynlibsrc/testpairbase.c
    dynlibsrc/testpdb.c
    dynlibsrc/transcript.c
    dynlibsrc/transcript.dy
    dynlibsrc/transcript.h
    dynlibsrc/transcript.o
    dynlibsrc/transcript.pod
    dynlibsrc/transcript.tex
    dynlibsrc/transcript.typemap
    dynlibsrc/transcript.xs
    dynlibsrc/transcript_api.h
    dynlibsrc/transcript_api.t
    dynlibsrc/translation.c
    dynlibsrc/translation.dy
    dynlibsrc/translation.h
    dynlibsrc/translation.o
    dynlibsrc/translation.pod
    dynlibsrc/translation.tex
    dynlibsrc/translation.typemap
    dynlibsrc/translation.xs
    dynlibsrc/translation_api.h
    dynlibsrc/translation_api.t
    external/mott/gaplib.c
    external/mott/gaplib.o
    external/mott/gapstat.h
    external/mott/libmott.a
    external/mott/makefile
    external/mott/mott_api.c
    external/mott/mott_api.h
    external/mott/mott_api.o
    external/mott/wise2_mott_bridge.c
    external/mott/wise2_mott_bridge.h
    external/mott/wise2_mott_bridge.o
    external/makefile
    haplotype/haplotype.dy
    haplotype/individual.dy
    haplotype/markerframework.dy
    HMMer2/aligneval.c
    HMMer2/aligneval.o
    HMMer2/alignio.c
    HMMer2/alignio.o
    HMMer2/alphabet.c
    HMMer2/alphabet.o
    HMMer2/cluster.c
    HMMer2/cluster.o
    HMMer2/config.h
    HMMer2/core_algorithms.c
    HMMer2/core_algorithms.o
    HMMer2/dayhoff.c
    HMMer2/dayhoff.o
    HMMer2/debug.c
    HMMer2/debug.o
    HMMer2/emit.c
    HMMer2/emit.o
    HMMer2/emulation.c
    HMMer2/emulation.o
    HMMer2/file.c
    HMMer2/file.o
    HMMer2/funcs.h
    HMMer2/getopt.c
    HMMer2/getopt.o
    HMMer2/globals.h
    HMMer2/GNULICENSE
    HMMer2/gnuregex.c
    HMMer2/gnuregex.h
    HMMer2/gnuregex.o
    HMMer2/histogram.c
    HMMer2/histogram.o
    HMMer2/hmmalign.c
    HMMer2/hmmbuild.c
    HMMer2/hmmcalibrate.c
    HMMer2/hmmconvert.c
    HMMer2/hmmemit.c
    HMMer2/hmmio.c
    HMMer2/hmmio.o
    HMMer2/hmmpfam.c
    HMMer2/hmmsearch.c
    HMMer2/interleaved.c
    HMMer2/interleaved.o
    HMMer2/iupac.c
    HMMer2/iupac.o
    HMMer2/libhmmer.a
    HMMer2/Makefile
    HMMer2/masks.c
    HMMer2/masks.o
    HMMer2/mathsupport.c
    HMMer2/mathsupport.o
    HMMer2/misc.c
    HMMer2/misc.o
    HMMer2/modelmakers.c
    HMMer2/modelmakers.o
    HMMer2/msf.c
    HMMer2/msf.o
    HMMer2/plan7.c
    HMMer2/plan7.o
    HMMer2/plan9.c
    HMMer2/plan9.o
    HMMer2/prior.c
    HMMer2/prior.o
    HMMer2/revcomp.c
    HMMer2/revcomp.o
    HMMer2/selex.c
    HMMer2/selex.o
    HMMer2/sqerror.c
    HMMer2/sqerror.o
    HMMer2/sqfuncs.h
    HMMer2/sqio.c
    HMMer2/sqio.o
    HMMer2/squid.h
    HMMer2/sre_ctype.c
    HMMer2/sre_ctype.o
    HMMer2/sre_math.c
    HMMer2/sre_math.o
    HMMer2/sre_string.c
    HMMer2/sre_string.o
    HMMer2/stack.c
    HMMer2/stack.o
    HMMer2/structs.h
    HMMer2/tophits.c
    HMMer2/tophits.o
    HMMer2/trace.c
    HMMer2/trace.o
    HMMer2/translate.c
    HMMer2/translate.o
    HMMer2/types.c
    HMMer2/types.o
    HMMer2/version.h
    HMMer2/weight.c
    HMMer2/weight.o
    models/abc.c
    models/abc.dy
    models/abc.h
    models/abc.o
    models/aligngenemodel.c
    models/aligngenemodel.dy
    models/aligngenemodel.h
    models/alignwise.c
    models/alignwisedp.c
    models/alignwisedp.dy
    models/alignwisedp.h
    models/amplimer_resolver.c
    models/bigdba.c
    models/bigdba.dy
    models/bigdba.h
    models/bigdba.o
    models/cdnawise.c
    models/cdnawise10.c
    models/cdnawise10.dy
    models/cdnawise10.h
    models/cdparser.c
    models/cdparser.dy
    models/cdparser.h
    models/cdparser.o
    models/cdparser.pod
    models/cdparser.tex
    models/cdparser.typemap
    models/cdparser.xs
    models/cdparser_api.h
    models/cdparser_api.t
    models/clonewise.c
    models/clonewisedp.c
    models/clonewisedp.dy
    models/clonewisedp.h
    models/dba
    models/dba.c
    models/dba.dy
    models/dba.h
    models/dba.o
    models/dbac.c
    models/dbac.o
    models/dbadisplay.c
    models/dbadisplay.dy
    models/dbadisplay.h
    models/dbadisplay.o
    models/dnaalign.c
    models/dnaalign.dy
    models/dnaalign.h
    models/dnaalign.o
    models/dnaalign.pod
    models/dnaalign.tex
    models/dnaalign.typemap
    models/dnaalign.xs
    models/dnaalign_api.h
    models/dnaalign_api.t
    models/dnahmm.c
    models/dnahmm.dy
    models/dnahmm.h
    models/dnal
    models/dnal.c
    models/dnal.o
    models/dnamatcher.c
    models/dnamatcher.dy
    models/dnamatcher.h
    models/dnaprofile.c
    models/dnaprofile.dy
    models/dnaprofile.h
    models/dnaprofiledp.c
    models/dnaprofiledp.dy
    models/dnaprofiledp.h
    models/dnaprofileengine.c
    models/dnaprofileengine.dy
    models/dnaprofileengine.h
    models/dnawise.c
    models/editdist.c
    models/editdistdp.c
    models/editdistdp.dy
    models/editdistdp.h
    models/est_evidence.c
    models/est_evidence.dy
    models/est_evidence.h
    models/est_evidence.o
    models/estfrag3.c
    models/estfrag3.dy
    models/estfrag3.h
    models/estfrag3.o
    models/estloop3.c
    models/estloop3.dy
    models/estloop3.h
    models/estloop3.o
    models/estquick3.c
    models/estquick3.dy
    models/estquick3.h
    models/estquick3.o
    models/estslim3.c
    models/estslim3.dy
    models/estslim3.h
    models/estslim3.o
    models/estslimloop.c
    models/estslimloop.dy
    models/estslimloop.h
    models/estslimloop.o
    models/estwise.c
    models/estwise.o
    models/estwise3.c
    models/estwise3.dy
    models/estwise3.h
    models/estwise3.o
    models/estwisedb.c
    models/estwisedb.o
    models/estwrap.c
    models/estwrap.dy
    models/estwrap.h
    models/estwrap.o
    models/estwrap.pod
    models/estwrap.tex
    models/estwrap.typemap
    models/estwrap.xs
    models/estwrap_api.h
    models/estwrap_api.t
    models/evopairwise.c
    models/fivestar.c
    models/fivestarscan.c
    models/fivestarsearch.c
    models/fivestate.c
    models/fivestate.dy
    models/fivestate.h
    models/fivestatemodel.c
    models/fivestatemodel.dy
    models/fivestatemodel.h
    models/genedisplay.c
    models/genedisplay.dy
    models/genedisplay.h
    models/genedisplay.o
    models/genedisplay.pod
    models/genedisplay.tex
    models/genedisplay.typemap
    models/genedisplay.xs
    models/genedisplay_api.h
    models/genedisplay_api.t
    models/genefrequency.c
    models/genefrequency.dy
    models/genefrequency.h
    models/genefrequency.o
    models/genefrequency.pod
    models/genefrequency.tex
    models/genefrequency.typemap
    models/genefrequency.xs
    models/genefrequency_api.h
    models/genefrequency_api.t
    models/geneloop21.c
    models/geneloop21.dy
    models/geneloop21.h
    models/geneloop21.o
    models/geneloop6.c
    models/geneloop6.dy
    models/geneloop6.h
    models/geneloop6.o
    models/geneoutput.c
    models/geneoutput.dy
    models/geneoutput.h
    models/geneoutput.o
    models/geneparameter.c
    models/geneparameter.dy
    models/geneparameter.h
    models/geneparameter.o
    models/geneparameter.pod
    models/geneparameter.tex
    models/geneparameter.typemap
    models/geneparameter.xs
    models/geneparameter_api.h
    models/geneparameter_api.t
    models/geneparser21.c
    models/geneparser21.dy
    models/geneparser21.h
    models/geneparser21.o
    models/geneparser4.c
    models/geneparser4.dy
    models/geneparser4.h
    models/geneparser4.o
    models/genephase6.c
    models/genephase6.dy
    models/genephase6.h
    models/genephase6.o
    models/genestats.c
    models/genestats.dy
    models/genestats.h
    models/genestats.o
    models/genestretch6.c
    models/genestretch6.dy
    models/genestretch6.h
    models/genestretch6.o
    models/geneutil.c
    models/geneutil.dy
    models/geneutil.h
    models/geneutil.o
    models/genewise.c
    models/genewise.o
    models/genewise21.c
    models/genewise21.dy
    models/genewise21.h
    models/genewise21.o
    models/genewise4.c
    models/genewise4.dy
    models/genewise4.h
    models/genewise4.o
    models/genewise6.c
    models/genewise6.dy
    models/genewise6.h
    models/genewise6.o
    models/genewisedb.c
    models/genewisedb.o
    models/genewisehsp.c
    models/genewisehsp.dy
    models/genewisehsp.h
    models/genewisehsp.o
    models/genewisemodel.c
    models/genewisemodel.dy
    models/genewisemodel.h
    models/genewisemodel.o
    models/genewisemodeldb.c
    models/genewisemodeldb.dy
    models/genewisemodeldb.h
    models/genewisemodeldb.o
    models/genome_evidence.c
    models/genome_evidence.dy
    models/genome_evidence.h
    models/genome_evidence.o
    models/genomewise.c
    models/genomewise.o
    models/genomewise9.c
    models/genomewise9.dy
    models/genomewise9.h
    models/genomewise9.o
    models/GNULICENSE
    models/gwlite.c
    models/gwlite.dy
    models/gwlite.h
    models/gwlite.o
    models/gwlitemodel.c
    models/gwlitemodel.dy
    models/gwlitemodel.h
    models/gwlitemodel.o
    models/gwquickdb.c
    models/gwquickdb.dy
    models/gwquickdb.h
    models/gwquickdb.o
    models/gwrap.c
    models/gwrap.dy
    models/gwrap.h
    models/gwrap.o
    models/hmminfo.c
    models/hsp2aln_sw.c
    models/hsp2aln_sw.dy
    models/hsp2aln_sw.h
    models/hsp2aln_sw.o
    models/largeblockdp.c
    models/largeblockdp.dy
    models/largeblockdp.h
    models/lba.c
    models/localcishit.c
    models/localcishit.dy
    models/localcishit.h
    models/localcishit.o
    models/localcispara.c
    models/localcispara.dy
    models/localcispara.h
    models/localcispara.o
    models/localclonewisedp.c
    models/localclonewisedp.dy
    models/localclonewisedp.h
    models/localdba.c
    models/localdba.dy
    models/localdba.h
    models/localdba.o
    models/makefile
    models/makepwm.c
    models/makerandomdb.c
    models/makeseqerror.c
    models/mapstruct.c
    models/mapstruct.dy
    models/mapstruct.h
    models/matchsum.c
    models/matchsum.dy
    models/matchsum.h
    models/matchsum.o
    models/matchsum.pod
    models/matchsum.tex
    models/matchsum.typemap
    models/matchsum.xs
    models/matchsum_api.h
    models/matchsum_api.t
    models/motifcluster.c
    models/motifdiff.c
    models/motifmatrix.c
    models/motifmatrix.dy
    models/motifmatrix.h
    models/motifmatrix.o
    models/motifmatrixdp.c
    models/motifmatrixdp.dy
    models/motifmatrixdp.h
    models/motifmatrixdp.o
    models/motifwise.c
    models/mutatedna.c
    models/oldpostwise.c
    models/pairwiseshortdna.c
    models/pairwiseshortdna.dy
    models/pairwiseshortdna.h
    models/pairwiseshortdna.o
    models/pba.c
    models/pba.dy
    models/pba.h
    models/pba.o
    models/pfamhmmer1db.c
    models/pfamhmmer1db.dy
    models/pfamhmmer1db.h
    models/pfamhmmer1db.o
    models/pfamhmmer1db.pod
    models/pfamhmmer1db.tex
    models/pfamhmmer1db.typemap
    models/pfamhmmer1db.xs
    models/pfamhmmer1db_api.h
    models/pfamhmmer1db_api.t
    models/phasemodel.c
    models/phasemodel.dy
    models/phasemodel.h
    models/phasemodel.o
    models/promotercluster.c
    models/promoterwise.c
    models/promoterwise.o
    models/proteinsw.c
    models/proteinsw.dy
    models/proteinsw.h
    models/proteinsw.o
    models/pseudowise.c
    models/pseudowise.o
    models/pseudowise7.c
    models/pseudowise7.dy
    models/pseudowise7.h
    models/pseudowise7.o
    models/psw
    models/psw.c
    models/psw.o
    models/pswdb
    models/pswdb.c
    models/pswdb.o
    models/pwmdna.c
    models/pwmdna.dy
    models/pwmdna.h
    models/pwmdna.o
    models/revcomp.c
    models/scanwisep.c
    models/scanwisep_wiseserver.o
    models/seqaligndisplay.c
    models/seqaligndisplay.dy
    models/seqaligndisplay.h
    models/seqaligndisplay.o
    models/seqaligndisplay.pod
    models/seqaligndisplay.tex
    models/seqaligndisplay.typemap
    models/seqaligndisplay.xs
    models/seqaligndisplay_api.h
    models/seqaligndisplay_api.t
    models/seqerror.c
    models/seqerror.dy
    models/seqerror.h
    models/seqhit.c
    models/seqhit.dy
    models/seqhit.h
    models/seqhit.o
    models/seqhit.pod
    models/seqhit.tex
    models/seqhit.typemap
    models/seqhit.xs
    models/seqhit_api.h
    models/seqhit_api.t
    models/seqlist.c
    models/slimdba.c
    models/slimdba.dy
    models/slimdba.h
    models/slimdba.o
    models/splicesitemodeler.c
    models/splicesitemodeler.dy
    models/splicesitemodeler.h
    models/splicesitemodeler.o
    models/standardout.c
    models/standardout.dy
    models/standardout.h
    models/standardout.o
    models/statwise.c
    models/statwise10.c
    models/sw_wrap.c
    models/sw_wrap.dy
    models/sw_wrap.h
    models/sw_wrap.o
    models/sw_wrap.pod
    models/sw_wrap.tex
    models/sw_wrap.typemap
    models/sw_wrap.xs
    models/sw_wrap_api.h
    models/sw_wrap_api.t
    models/syexonmodel.c
    models/syexonmodel.dy
    models/syexonmodel.h
    models/syexonmodel.o
    models/sywise.c
    models/sywise.o
    models/sywise20.c
    models/sywise20.dy
    models/sywise20.h
    models/sywise20.o
    models/test_aligng.c
    models/test_gwhsp.c
    models/test_splice.c
    models/testdna.c
    models/testgenestat.c
    models/threestatedb.c
    models/threestatedb.dy
    models/threestatedb.h
    models/threestatedb.o
    models/threestatedb.pod
    models/threestatedb.tex
    models/threestatedb.typemap
    models/threestatedb.xs
    models/threestatedb_api.h
    models/threestatedb_api.t
    models/threestatedp.c
    models/threestatedp.dy
    models/threestatedp.h
    models/threestateloop.c
    models/threestateloop.dy
    models/threestateloop.h
    models/threestatemodel.c
    models/threestatemodel.dy
    models/threestatemodel.h
    models/threestatemodel.o
    models/threestatemodel.pod
    models/threestatemodel.tex
    models/threestatemodel.typemap
    models/threestatemodel.xs
    models/threestatemodel_api.h
    models/threestatemodel_api.t
    models/transfactor.c
    models/transfactor.dy
    models/transfactor.h
    models/transfactor.o
    models/transregion.c
    models/transregion.dy
    models/transregion.h
    models/transregiondp.c
    models/transregiondp.dy
    models/transregiondp.h
    models/version.h
    models/wise2xhmmer2.c
    models/wise2xhmmer2.dy
    models/wise2xhmmer2.h
    models/wise2xhmmer2.o
    network/client_multihspscan.c
    network/client_multihspscan.dy
    network/client_multihspscan.h
    network/client_multihspscan.o
    network/makefile
    network/net_hspscan.c
    network/net_hspscan.dy
    network/net_hspscan.h
    network/net_hspscan.o
    network/README
    network/scanwise_server
    network/wise_proteinindex_server.c
    network/wise_proteinindex_server.o
    other_programs/makefile
    other_programs/orthoset.dy
    other_programs/test_ortho.c
    perl/scripts/blastwise.pl
    perl/scripts/estwise.pl
    perl/scripts/genewise.pl
    perl/scripts/halfwise.pl
    perl/scripts/postwise.pl
    perl/scripts/protestwise.pl
    perl/scripts/README
    perl/Wise2/blib/lib/auto/Wise2/autosplit.ix
    perl/Wise2/blib/lib/aln.pod
    perl/Wise2/blib/lib/alnrange.pod
    perl/Wise2/blib/lib/basematrix.pod
    perl/Wise2/blib/lib/cdna.pod
    perl/Wise2/blib/lib/cdnadb.pod
    perl/Wise2/blib/lib/cdparser.pod
    perl/Wise2/blib/lib/codon.pod
    perl/Wise2/blib/lib/codonmapper.pod
    perl/Wise2/blib/lib/complexsequence.pod
    perl/Wise2/blib/lib/compmat.pod
    perl/Wise2/blib/lib/dbsearchimpl.pod
    perl/Wise2/blib/lib/dnaalign.pod
    perl/Wise2/blib/lib/dnamatrix.pod
    perl/Wise2/blib/lib/estwrap.pod
    perl/Wise2/blib/lib/gene.pod
    perl/Wise2/blib/lib/genedisplay.pod
    perl/Wise2/blib/lib/genefrequency.pod
    perl/Wise2/blib/lib/geneparameter.pod
    perl/Wise2/blib/lib/genomic.pod
    perl/Wise2/blib/lib/genomicdb.pod
    perl/Wise2/blib/lib/genomicregion.pod
    perl/Wise2/blib/lib/histogram.pod
    perl/Wise2/blib/lib/hscore.pod
    perl/Wise2/blib/lib/matchsum.pod
    perl/Wise2/blib/lib/packaln.pod
    perl/Wise2/blib/lib/pfamhmmer1db.pod
    perl/Wise2/blib/lib/probability.pod
    perl/Wise2/blib/lib/protein.pod
    perl/Wise2/blib/lib/proteindb.pod
    perl/Wise2/blib/lib/randomdb.pod
    perl/Wise2/blib/lib/randommodel.pod
    perl/Wise2/blib/lib/seqaligndisplay.pod
    perl/Wise2/blib/lib/seqhit.pod
    perl/Wise2/blib/lib/sequence.pod
    perl/Wise2/blib/lib/sequence_codon.pod
    perl/Wise2/blib/lib/sequencedb.pod
    perl/Wise2/blib/lib/sw_wrap.pod
    perl/Wise2/blib/lib/threestatedb.pod
    perl/Wise2/blib/lib/threestatemodel.pod
    perl/Wise2/blib/lib/transcript.pod
    perl/Wise2/blib/lib/translation.pod
    perl/Wise2/blib/lib/Wise2.pm
    perl/Wise2/libs/Makefile
    perl/Wise2/libs/README
    perl/Wise2/libs/wise2.h
    perl/Wise2/aln.pod
    perl/Wise2/alnrange.pod
    perl/Wise2/basematrix.pod
    perl/Wise2/blosum62.bla
    perl/Wise2/cdna.pod
    perl/Wise2/cdnadb.pod
    perl/Wise2/cdparser.pod
    perl/Wise2/codon.pod
    perl/Wise2/codonmapper.pod
    perl/Wise2/complexsequence.pod
    perl/Wise2/compmat.pod
    perl/Wise2/dbsearchimpl.pod
    perl/Wise2/dnaalign.pod
    perl/Wise2/dnamatrix.pod
    perl/Wise2/estwrap.pod
    perl/Wise2/gene.pod
    perl/Wise2/genedisplay.pod
    perl/Wise2/genefrequency.pod
    perl/Wise2/geneparameter.pod
    perl/Wise2/genomic.pod
    perl/Wise2/genomicdb.pod
    perl/Wise2/genomicregion.pod
    perl/Wise2/histogram.pod
    perl/Wise2/hscore.pod
    perl/Wise2/Makefile
    perl/Wise2/Makefile.PL
    perl/Wise2/matchsum.pod
    perl/Wise2/MYMETA.json
    perl/Wise2/MYMETA.yml
    perl/Wise2/packaln.pod
    perl/Wise2/pfamhmmer1db.pod
    perl/Wise2/pm_to_blib
    perl/Wise2/probability.pod
    perl/Wise2/protein.pod
    perl/Wise2/proteindb.pod
    perl/Wise2/randomdb.pod
    perl/Wise2/randommodel.pod
    perl/Wise2/seqaligndisplay.pod
    perl/Wise2/seqhit.pod
    perl/Wise2/sequence.pod
    perl/Wise2/sequence_codon.pod
    perl/Wise2/sequencedb.pod
    perl/Wise2/sw_wrap.pod
    perl/Wise2/test.pl
    perl/Wise2/threestatedb.pod
    perl/Wise2/threestatemodel.pod
    perl/Wise2/transcript.pod
    perl/Wise2/translation.pod
    perl/Wise2/typemap
    perl/Wise2/Wise2.pm
    perl/Wise2/Wise2.xs
    perl/Wise2/Wise2.xsc
    perl/basic.h
    perl/basic.typemap
    perl/Makefile
    perl/makelib.pl
    perl/top.xs
    snp/frequency_count.dy
    snp/genotype.dy
    snp/locus_framework.dy
    snp/locus_model_estimators.dy
    snp/makefile
    snp/person.dy
    snp/test_est.c
    socket/anonobj.c
    socket/anonobj.dy
    socket/anonobj.h
    socket/anonobj.o
    socket/directsocketwrite.c
    socket/directsocketwrite.dy
    socket/directsocketwrite.h
    socket/directsocketwrite.o
    socket/functionclient.c
    socket/functionclient.dy
    socket/functionclient.h
    socket/functionclient.o
    socket/functionserver.c
    socket/functionserver.dy
    socket/functionserver.h
    socket/functionserver.o
    socket/libwisesocket.a
    socket/makefile
    socket/simplebufferedserver.c
    socket/simplebufferedserver.dy
    socket/simplebufferedserver.h
    socket/simplesocketclient.c
    socket/simplesocketclient.dy
    socket/simplesocketclient.h
    socket/transferinterface.c
    socket/transferinterface.dy
    socket/transferinterface.h
    socket/transferinterface.o
    test/basic_cdna.out
    test/basic_dna.out
    test/basic_genomic.out
    test/dna.db
    test/estwise-db.out
    test/genewise-db-lite.out
    test/genewise-db.out
    test/genewisedb-pfam.out
    test/go.evi
    test/go.out
    test/HMM.ascii
    test/HMM.binary
    test/hmm_cdna.out
    test/hmm_genomic.out
    test/human.genomic
    test/pep.fa
    test/promoterwise.out
    test/pswdb.out
    test/pw.human
    test/pw.mouse
    test/road.pep
    test/rrm.HMM
    test/scanwisep.out
    test/short.dna
    test/short.pep
    test/short.test
    test/testman.pl
    test/wrong.hmm
    test/wrong.out
    test/wrong_est.out
    makefile
    SOURCE_ROADMAP
    welcome.csh)

add_executable(src ${SOURCE_FILES})